// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderHome - Snapshots > matches snapshot for default HeaderHome 1`] = `
<div
  class="flex-1 flex-row items-center justify-end"
>
  <div
    data-testid="header-social-links"
  >
    Social Links
  </div>
  <button
    data-testid="header-button-sign-in"
  >
    Sign in
  </button>
</div>
`;

exports[`HeaderHome - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="custom-class"
>
  <div
    data-testid="header-social-links"
  >
    Social Links
  </div>
  <button
    data-testid="header-button-sign-in"
  >
    Sign in
  </button>
</div>
`;
